k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-app-service
  namespace: devsecops
  labels:
    app: devsecops-app
spec:
  type: NodePort  # ← Changement clé
  selector:
    app: devsecops-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30080
