k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-app-service
  namespace: devsecops
  labels:
    app: devsecops-app
    service: devsecops-app-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5000"
spec:
  type: LoadBalancer
  selector:
    app: devsecops-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: 5000
  sessionAffinity: None
