k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsecops-app-ingress
  namespace: devsecops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: devsecops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devsecops-app-service
                port:
                  number: 80
